--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,7 +14,7 @@ $lightest-blue: #7EB9FC;
 $very-light-blue: #AFEBFF;
 $very-very-light-blue: #cdf2ff;
 $white: #FFFFFF;
-$light-gray: #ECEBEB;
+$light-gray: #f4f4f4;
 $gray: #808080;
 $medium-gray: #66757F;
 $dark-gray: #0E0000;
