--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,7 +1,7 @@
-<h1 class="title">Edit Profile</h1>
+<h1 class="title-profile">Edit Profile</h1>
 
 <div class="card-form custom-card">
-  <div class="card-body">
+  <div class="card-form-body">
     <%= simple_form_for @profile, html: { class: "profile-form", multipart: true } do |f| %>
       <div class="form-input">
         <%= f.input :name, label: "Name", input_html: { class: 'custom-text-field' } %>
@@ -10,7 +10,7 @@
         <%= f.input :bio, label: "Bio", as: :text, input_html: { class: 'custom-text-field' } %>
       </div>
     <div class="form-input">
-       <%= f.input :country, label: "Country", collection: ['Brazil', 'Portugal', 'France', 'Italy'], input_html: { class: 'custom-text-field' } %>
+       <%= f.input :country, label: "Country", collection: ['Argentina','Australia','Brazil','Chile','France','Germany','Italy','Portugal','Spain','United States'], input_html: { class: 'custom-text-field' } %>
     </div>
       <div class="form-input">
         <%= f.input :city, label: "City", input_html: { class: 'custom-text-field' } %>
@@ -37,7 +37,7 @@
         <%= f.input :photo, label: "Imagem de Perfil", as: :file %>
       </div>
       <div>
-        <%= f.button :submit, "Edit Profile", class: "btn-quarto" %>
+        <%= f.button :submit, "Edit Profile", class: "btn btn-form" %>
       </div>
     <% end %>
   </div>
