--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -3,14 +3,17 @@
 <div id="messages">
   <%= turbo_frame_tag :messages do %>
     <% @messages.each do |message| %>
-      <%= render "messages/message", message: message, user: message.user %>
+      <%= render "messages/message", message: message %>
     <% end %>
   <% end %>
 </div>
 
-<%= simple_form_for [@match, Message.new], html: {class: "d-flex", data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }} do |f| %>
+<%= simple_form_for [@match, Message.new], html: { class: "d-flex", data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" } } do |f| %>
   <div class="form-group">
     <%= f.input :content, placeholder: "Type your message" %>
-    <%= f.submit "Send", class: "btn btn-primary" %>
+    <%= f.submit "Send", class: "btn btn-send-chat" %>
+    <%= link_to matches_path, class: "btn btn-back-messages" do %>
+      Messages
+    <% end %>
   </div>
 <% end %>
