--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,7 @@
 <div id="message-<%= message.id %>"
-     class="message <%= message.user == user ? 'sent' : 'received' %>"
-     data-controller="message"
-     data-message-user-id-value="<%= message.user.id %>">
+     class="message"
+     data-message-author-id-value="<%= message.user.id %>"
+     data-controller="message">
   <small class="message-info">
     <strong><%= message.user.name %></strong>
     <i><%= message.created_at.strftime("%a %b %e at %l:%M %p") %></i>
