arrumei a logo e a fonte

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,8 +8,10 @@
 }
 
 .navbar-custom .navbar-brand img {
-  width: 60px;
-  height: 60px;
+  width: 160px;
+  height: 40px;
+  padding: 0px;
+  margin: 0px;
 }
 
 .navbar-custom .navbar-toggler {
