--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -8,9 +8,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
 // Define fonts for body and headers
 
-$headers-font: 'Fredoka One', sans-serif; // para títulos
+
+$headers-font: 'Lilita One', sans-serif; // para títulos
 $body-font: 'Fredoka', sans-serif; // para subtítulos
 $subtitle-font: 'Poppins', sans-serif; // para subtítulos
 $body-font: 'Roboto', sans-serif; // corpo de texto
