--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,3 +1,4 @@
+
 <h1 class="title-profile">Edit Profile</h1>
 
 <div class="card-form custom-card">
@@ -37,7 +38,7 @@
         <%= f.input :photo, label: "Imagem de Perfil", as: :file %>
       </div>
       <div>
-        <%= f.button :submit, "Edit Profile", class: "btn btn-form" %>
+        <%= f.button :submit, "Edit Profile", class: "btn btn-edit" %>
       </div>
     <% end %>
   </div>
