--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -38,7 +38,7 @@
         <%= f.input :photo, label: "Imagem de Perfil", as: :file %>
       </div>
       <div>
-        <%= f.button :submit, "Create Profile", class: "btn btn-form" %>
+        <%= f.button :submit, "Create Profile", class: "btn btn-edit" %>
       </div>
     <% end %>
   </div>
