--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,6 +10,9 @@
     font-weight: bold;
     font-size: 41px;
     font-family: $headers-font;
+    text-align: center;
+    width: 100%;
+    display: block;
   }
 
   .titulo-home-2 {
@@ -18,6 +21,8 @@
     font-weight: bold;
     font-size: 41px;
     font-family: $headers-font;
+    text-align: center;
+    display: block;
   }
 
   .titulo-home-3 {
@@ -25,25 +30,30 @@
     font-size: 2rem;
     font-weight: bold;
     font-size: 18px;
+    text-align: center;
+    display: block;
   }
 
   .search-box  {
-    max-width: 500px;
+    max-width: 700px;
     margin: 20px auto;
     display: flex;
     justify-content: center;
     gap: 10px;
+    border-color: #003878;
+    width: 100%;
+    padding: 12px 20px;
 
     .btn-pesquisa {
       background-color: #003878;
       color: $white;
-      padding: 10px 15px;
+      padding: 15px;
       font-weight: bold;
-      border: none;
-      border-radius: 5px;
       cursor: pointer;
       font-size: 14px;
       transition: background-color 0.3s ease;
+      border-radius: 20px;
+      justify-content: center;
 
       &:hover {
         background-color: darken($light-blue, 10%);
