--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner text-center text-md-start">
   <div class="container">
-    <p><span class="titulo-home">Explore Cities,</span> <span class="titulo-home-2">Like a Locals</span></p>
+    <p><span class="titulo-home">Explore Cities,</span> <span class="titulo-home-2">Like a Local</span></p>
     <p class="titulo-home-3">
       Discover authentic experiences guided by passionate locals.
     </p>
@@ -41,8 +41,8 @@
 </div>
 </div>
 <div class="container mt-5 custom-section-titulo">
-  <h2 class="fw-normal">Go local in Charming Cities</h2>
-  <p class="text-muted">Find personalized recommendations from passionate locals</p>
+  <h2 class="titulo-home-2">Go local in Charming Cities</h2>
+  <p class="titulo-home-3">Find personalized recommendations from passionate locals</p>
 </div>
   <div class="row g-3">
   <% images = {
