--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,24 +1,27 @@
 <h1 class="title-profile">Profiles</h1>
 <section class="profiles-listing">
-<div class="card-form custom-card">
-  <div class="card-form-body">
-  <ul>
-    <% @profiles.each do |profile| %>
-      <li>
-        <article class="profile-card">
-          <% if profile.photo.attached? %>
-      <%= cl_image_tag profile.photo.key, alt: "Photo of #{profile.name}", class: "profile-photo" %>
-          <% end %>
-          <h2><%= profile.name %></h2>
-          <p><strong>Location:</strong> <%= profile.city %>, <%= profile.country %></p>
-          <p><strong>Language:</strong> <%= profile.language %></p>
-          <div class="buttons-container">
-          <%= link_to "View Profile", profile_path(profile, query: params[:query]), class: "btn btn-segundo" %>
-        </div>
-        </article>
-      </li>
-    <% end %>
-  </ul>
+  <div class="card-form custom-card">
+    <div class="card-form-body">
+      <ul style="list-style-type: none; padding: 0; margin: 0;">
+        <% @profiles.each do |profile| %>
+          <li>
+            <article class="profile-card">
+              <% if profile.photo.attached? %>
+                <%= cl_image_tag profile.photo.key, alt: "Photo of #{profile.name}", class: "profile-photo" %>
+              <% end %>
+              <h2><%= profile.name %></h2>
+              <p><strong>Location:</strong> <%= profile.city %>, <%= profile.country %></p>
+              <p><strong>Language:</strong> <%= profile.language %></p>
+              <div class="buttons-container">
+                <%= link_to "View Profile", profile_path(profile, query: params[:query]), class: "btn btn-edit" %>
+              </div>
+            </article>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 </section>
-</div>
-</div>
+<footer class="footer">
+  <p>&copy; 2025 Local Buddy. All rights reserved. </p>
+</footer>
