--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,7 @@
   border-radius: 10px;
   text-align: center;
 
-  .titulo-home {
+  .title-home {
     color: #1369CB;
     font-size: 2rem;
     font-weight: bold;
@@ -15,7 +15,7 @@
     display: block;
   }
 
-  .titulo-home-2 {
+  .title-home-2 {
     color: #003878;
     font-size: 2rem;
     font-weight: bold;
@@ -25,7 +25,7 @@
     display: block;
   }
 
-  .titulo-home-3 {
+  .title-home-3 {
     color: #1369CB;
     font-size: 2rem;
     font-weight: bold;
@@ -62,7 +62,7 @@
   }
 }
 
-.custom-section-titulo {
+.custom-section-title {
   background: linear-gradient(180deg, #2782EB 0%, #AFEBFF 100%);
   padding: 50px 0;
   color: #003878;
