--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner text-center text-md-start">
   <div class="container">
-    <p><span class="titulo-home">Explore Cities,</span> <span class="titulo-home-2">Like a Local</span></p>
-    <p class="titulo-home-3">
+    <p><span class="title-home">Explore Cities,</span> <span class="title-home-2">Like a Local</span></p>
+    <p class="title-home-3">
       Discover authentic experiences guided by passionate locals.
     </p>
   </div>
@@ -40,9 +40,9 @@
   </div>
 </div>
 </div>
-<div class="container mt-5 custom-section-titulo">
-  <h2 class="titulo-home-2">Go local in Charming Cities</h2>
-  <p class="titulo-home-3">Find personalized recommendations from passionate locals</p>
+<div class="container mt-5 custom-section-title">
+  <h2 class="title-home-2">Go local in Charming Cities</h2>
+  <p class="title-home-3">Find personalized recommendations from passionate locals</p>
 </div>
   <div class="row g-3">
   <% images = {
