--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -34,6 +34,27 @@
     display: block;
   }
 
+  .title-home-4 {
+    color: #003878;
+    font-size: 2rem;
+    font-weight: bold;
+    font-size: 41px;
+    font-family: $headers-font;
+    text-align: center;
+    display: flex;
+    margin: 0;
+  }
+
+  .title-home-5 {
+    color: #1369CB;
+    font-size: 2rem;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;
+    display: flex;
+    margin: 0;
+  }
+
   .search-box  {
     max-width: 700px;
     margin: 20px auto;
@@ -66,6 +87,7 @@
   background: linear-gradient(180deg, #2782EB 0%, #AFEBFF 100%);
   padding: 50px 0;
   color: #003878;
+  text-align: center;
 }
 
 .card {
