--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -27,4 +27,5 @@
 </section>
 <footer class="footer">
   <p>&copy; 2025 Local Buddy. All rights reserved. </p>
+  <p>&copy; Created by Amanda Arruda, Amanda Miquelino and Eduardo Juricic. </p>
 </footer>
